# VinRougeData

./: .gitignore  Cargo.toml  DATA_PROFILING.md  EXPORT_GUIDE.md  FILE_BROWSER.md  GROUPED_EXPORT_GUIDE.md  GROUPING_ANALYSIS.md  LLM_GUIDE.md  README.md  RECONCILIATION.md  TUI_GUIDE.md  build-desktop.sh  example-config.json
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  deploy-pages.yml  desktop.yml  pages.yml  release.yml
src/: audit_prompts.rs  lib.rs  main.rs  ollama.rs
src/analysis/: data_profiler.rs  grouping_analyzer.rs  mod.rs  multi_value_detector.rs  reconciliation.rs  relationship_detector.rs  relationship_scorer.rs  workflow_detector.rs
src/config/: mod.rs
src/dsl/: ast.rs  datasource.rs  error.rs  lexer.rs  mod.rs  parser.rs  resolver.rs  token.rs  value.rs
src/dsl/eval/: aggregate.rs  assert.rs  mod.rs  result.rs  sample.rs
src/export/: audit_plan.rs  console.rs  excel.rs  grouped_excel.rs  json.rs  markdown.rs  mod.rs  pbc_list.rs  voortrekkers.rs
src/projects/: db.rs  mod.rs  ocr.rs  prompts.rs
src/schema/: column.rs  mod.rs  relationship.rs  table.rs
src/sources/: csv_source.rs  excel.rs  flatfile.rs  mod.rs  mssql.rs
src/tui/: app.rs  events.rs  file_browser.rs  mod.rs  ui.rs
vinrouge-desktop/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
vinrouge-desktop/binaries/: README.md
vinrouge-desktop/capabilities/: default.json
vinrouge-desktop/icons/: icon.icns
vinrouge-desktop/installer/: stub.iss  stub.nsi
vinrouge-desktop/src/: main.rs  session_db.rs
vinrouge-web/: Cargo.toml  Trunk.toml  index.html
vinrouge-web/src/: analysis_bridge.rs  data_view.rs  file_analysis.rs  file_upload.rs  ipc.rs  lib.rs  main.rs  ollama.rs  storage.rs  types.rs
vinrouge-web/src/Components/: badges.rs  banner.rs  buttons.rs  inputs.rs  mod.rs  progress_ring.rs  section_prompt.rs  stat_card.rs
vinrouge-web/src/components/: badges.rs  banner.rs  buttons.rs  inputs.rs  progress_ring.rs  section_prompt.rs  spinner.rs
vinrouge-web/src/projects/: mod.rs
vinrouge-web/src/step1/: mod.rs  prompts.rs
vinrouge-web/src/step2/: mod.rs
vinrouge-web/src/step3/: mod.rs
vinrouge-web/src/step4/: mod.rs  types.rs  upload.rs  view.rs
vinrouge-web/src/step4a/: helpers.rs  mod.rs  pipeline.rs  prompts.rs  types.rs  view.rs
vinrouge-web/src/step4b/: mod.rs  view.rs
vinrouge-web/src/step5/: mod.rs  view.rs
vinrouge-web/src/step5a/: chart.rs  mod.rs  modal.rs  types.rs  view.rs
vinrouge-web/src/step5b/: mod.rs  pipeline.rs  view.rs
vinrouge-web/src/ui/: app.rs  export_bar.rs  mod.rs  results_view.rs  upload_panel.rs
vinrouge-web/style/: main.css
