[package]
name = "vinrouge"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
tiberius = { version = "0.12", features = ["chrono", "sql-browser-tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }

# File parsing
csv = "1.3"
calamine = "0.26"
rust_xlsxwriter = "0.79"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Date/time
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"
