[workspace]
members = [".", "vinrouge-web"]
resolver = "2"

[package]
name = "vinrouge"
version = "0.1.0"
edition = "2021"

[lib]
name = "vinrouge"
crate-type = ["rlib"]

[[bin]]
name = "vinrouge"
path = "src/main.rs"

[dependencies]
# File parsing (WASM-compatible)
csv = "1.3"
calamine = "0.26"
rust_xlsxwriter = { version = "0.79", features = ["wasm"] }

# Serialization (WASM-compatible)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling (WASM-compatible)
anyhow = "1.0"
thiserror = "1.0"

# Async traits (WASM-compatible)
async-trait = "0.1"

# Date/time (wasmbind enables JS Date on wasm32)
chrono = { version = "0.4", features = ["wasmbind"] }

# Logging (WASM-compatible core)
tracing = "0.1"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# OpenSSL vendored so cross-compilation doesn't need system OpenSSL headers
openssl = { version = "0.10", features = ["vendored"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
tiberius = { version = "0.12", features = ["chrono", "sql-browser-tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Configuration
config = "0.14"
toml = "0.8"

# Logging subscriber
tracing-subscriber = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

# ── Release profile ──────────────────────────────────────────────────────────
# Applied to all workspace members including vinrouge-web (WASM).
# These settings here are the ones that actually take effect; the copy in
# vinrouge-web/Cargo.toml is ignored by Cargo for workspace builds.
[profile.release]
opt-level = "z"      # minimise binary size (wasm bundle)
lto = true           # cross-crate inlining
codegen-units = 1    # single codegen unit → better LTO
panic = "abort"      # no unwinding machinery in WASM
strip = true         # strip debug symbols from native binary
