[workspace]
members = [".", "vinrouge-web"]
resolver = "2"

[package]
name = "vinrouge"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "vinrouge"
crate-type = ["rlib"]

[[bin]]
name = "vinrouge"
path = "src/main.rs"

[dependencies]
# File parsing (WASM-compatible)
csv = "1.3"
calamine = "0.26"
rust_xlsxwriter = { version = "0.79", features = ["wasm"] }

# Serialization (WASM-compatible)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling (WASM-compatible)
anyhow = "1.0"
thiserror = "1.0"

# Audit DSL numeric type
rust_decimal = "1"
rust_decimal_macros = "1"

# Sampling (MUS / Random / Systematic / Stratified)
rand = { version = "0.8", features = ["small_rng"] }

# Async traits (WASM-compatible)
async-trait = "0.1"

# Date/time (wasmbind enables JS Date on wasm32)
chrono = { version = "0.4", features = ["wasmbind", "serde"] }

# Logging (WASM-compatible core)
tracing = "0.1"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP client (for Ollama integration)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
tiberius  = { version = "0.12", features = ["chrono", "sql-browser-tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
rusqlite   = { version = "0.31", features = ["bundled"] }
uuid       = { version = "1", features = ["v4"] }

# PDF text extraction + OCR
pdf-extract    = "0.7"
pdfium-render  = { version = "0.8", features = ["image"] }
ocrs           = "0.7"
rten           = "0.9"   # must match the version ocrs 0.7 uses internally
ureq           = "2"     # lightweight sync HTTP — used to auto-download OCR models

# Configuration
config = "0.14"
toml = "0.8"

# Logging subscriber
tracing-subscriber = "0.3"

# Document export (Audit Plan + PBC List)
printpdf = "0.6"
docx-rs  = "0.4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
gloo-net = { version = "0.6", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
