[package]
name = "vinrouge-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vinrouge-web"
path = "src/main.rs"

[dependencies]
# Leptos CSR (client-side rendering in the browser)
leptos = { version = "0.7", features = ["csr"] }

# WASM glue
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Browser APIs
web-sys = { version = "0.3", features = [
    "Blob",
    "console",
    "DataTransfer",
    "DragEvent",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "HtmlInputElement",
    "Storage",
    "Window",
] }

# Serialization (needed to deserialize Tauri command responses)
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Ollama (WASM-native fetch wrapper)
gloo-net = { version = "0.6", features = ["json"] }

# Core analysis library (WASM-compatible subset)
vinrouge = { path = ".." }

